# cigale

./: .gitignore  Cargo.toml  README.md  build.rs  com.github.emmanueltouzery.cigale.desktop
flatpak/: build-and-install-flatpak.sh  com.github.emmanueltouzery.cigale.json  com.github.emmanueltouzery.cigale.metainfo.xml  update-cargo-sources.sh
helpers/: README.md
helpers/redmine_locales/: Cargo.toml
helpers/redmine_locales/src/: main.rs
resources/: style.css
src/: config.rs  icons.gresource  icons.rs  main.rs
src/events/: email.rs  events.rs  git.rs  gitlab.rs  ical.rs  mod.rs  redmine.rs  stackexchange.rs
src/widgets/: addeventsourcedlg.rs  addeventsourcewin.rs  datepicker.rs  event.rs  events.rs  eventsource.rs  eventsources.rs  mod.rs  preferences.rs  shortcuts.ui  win.rs  wintitlebar.rs
tests/: two_short_emails.txt
