[package]
name = "cigale"
version = "0.5.2"
authors = ["Emmanuel Touzery <etouzery@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.10.1"
gio = "0.9.0"
gdk = "0.13.0"
relm = "0.20.0"
relm-derive = "0.20.0"
chrono = { version = "0.4.13", features = ["serde"] }
git2 = "0.13.8"
pango = "0.9.0"
mailparse = "0.13.0"
toml = "0.5.6"
dirs = "3.0.1"
serde = "1.0.114"
serde_derive = "1.0.114"
scraper = "0.12.0"
reqwest = { version = "0.10.7", features = ["blocking", "cookies"] }
env_logger = "0.7.1"
log = "0.4.11"
regex = "1.3.9"
itertools = "0.9.0"
rayon = "1.3.1"
serde_json = "1.0.57"

[dependencies.ical]
version = "0.6.0"
default-features = false
features = ["ical"]

[dependencies.gtk]
version = "0.9.1"
features = ["v3_22_29"]
