[package]
name = "cigale"
version = "0.5.2"
authors = ["Emmanuel Touzery <etouzery@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.10.3"
gio = "0.9.1"
gdk = "0.13.2"
relm = "0.21.0"
relm-derive = "0.21.0"
chrono = { version = "0.4.19", features = ["serde"] }
git2 = "0.13.17"
pango = "0.9.1"
mailparse = "0.13.2"
toml = "0.5.8"
dirs = "3.0.1"
serde = "1.0.123"
serde_derive = "1.0.123"
scraper = "0.12.0"
reqwest = { version = "0.11.0", features = ["blocking", "cookies"] }
env_logger = "0.8.3"
log = "0.4.14"
regex = "1.4.3"
itertools = "0.10.0"
rayon = "1.5.0"
serde_json = "1.0.62"

[dependencies.ical]
version = "0.7.0"
default-features = false
features = ["ical"]

[dependencies.gtk]
version = "0.9.2"
features = ["v3_22_29"]
