[package]
name = "cigale"
version = "0.5.4"
authors = ["Emmanuel Touzery <etouzery@gmail.com>"]
edition = "2018"

[build-dependencies]
reqwest = { version = "0.11.4", features = ["blocking"] }
flate2 = "1.0.20"
tar = "0.4.35"
includedir_codegen = "0.6.0"

[dependencies]
glib = "0.16.0"
gio = "0.16.0"
gdk = "0.16.0"
relm = { git = "https://github.com/antoyo/relm.git", rev = "66b0f189440e9a9c40f2765134a1054e5e0fd291" }
relm-derive = { git = "https://github.com/antoyo/relm.git", rev = "66b0f189440e9a9c40f2765134a1054e5e0fd291" }
chrono = { version = "0.4.19", features = ["serde"] }
git2 = "0.13.20"
pango = "0.16.0"
mailparse = "0.13.4"
toml = "0.5.8"
dirs = "3.0.2"
serde = "1.0.126"
serde_derive = "1.0.126"
scraper = "0.12.0"
reqwest = { version = "0.11.3", features = ["blocking", "cookies"] }
env_logger = "0.8.4"
log = "0.4.14"
regex = "1.5.4"
itertools = "0.10.1"
rayon = "1.5.1"
serde_json = "1.0.64"

[dependencies.ical]
version = "0.7.0"
default-features = false
features = ["ical"]

[dependencies.gtk]
version = "0.16.0"
